package bank.card;

public enum CardType {
    DEBIT,
    CREDIT
}
