package app.model.bank.card;

public class BankRequisites {
}
