@startuml

title __CARD's Class Diagram__\n

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            class app.model.bank.card.BankRequisites {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            abstract class app.model.bank.card.Card {
                - cardCode : String
                - cardNumber : String
                - clientScriptedDNACode : String
                - quantumSign : String
                + Card()
                + forcedCardNumberRewrite()
                + getCardBank()
                + getCardCode()
                + getCardInfo()
                + getCardNumber()
                + getCardType()
                + getClientScriptedDNACode()
                + getInfoForPrint()
                + getQuantumSign()
                + setCardCode()
                + setCardNumber()
                {abstract} + setCardType()
                + setCardType()
                + setClientScriptedDNACode()
                + setQuantumSign()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            enum CardType {
              CREDIT
              DEBIT
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace pp {
      namespace model {
        namespace bank {
          namespace card {
            interface app.model.bank.card.ICard {
                {abstract} + getCardInfo()
            }
          }
        }
      }
    }
  }
  

  app.model.bank.card.Card .up.|> app.model.bank.card.ICard
  app.model.bank.card.Card o-- app.model.bank.IBank : bank
  app.model.bank.card.Card o-- app.model.bank.card.CardType : cardType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
